# fish_prompt

./: .gitignore  CMakeLists.txt  README.md  fish_prompt.c  mstotime.c
